# analyze_claim_exercise

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_docker.sh
scratch/: run_analyze_claim.py  run_config.py
src/: config.py  main.py
src/adapter/: memory_db.py
src/adapter/agents/: __init__.py  gemini.py
src/adapter/agents/prompts/: __init__.py  claim_analysis.txt
src/adapter/agents/tools/: validate_vin.py  warranty.py
src/domain/: models.py
src/feature/: __init__.py  analyze_claim.py  get_claim.py
src/presenter/rest_api/: app.py  models.py  router.py
tests/: test_gemini_parsing.py  test_memory_db.py  test_validate_vin.py  test_warranty.py
