[project]
name = "analyze-claim-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.8.1",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
]
