[project]
name = "analyze-claim-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=0.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.8.1",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
]
